--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Julie's Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -21,10 +21,10 @@
     <br />
     <p class="title">Self Declared Web Developer
       <br />(And Artist)</p>
-    <button class="button"><a href="#home">Home</a></button>
-    <button class="button"><a href="#about">About</a></button>
-    <button class="button"><a href="#projects">Projects</a></button>
-    <button class="button"><a href="#contact">Contact</a></button>
+    <button><a href="#home">Home</a></button>
+    <button><a href="#about">About</a></button>
+    <button><a href="#projects">Projects</a></button>
+    <button><a href="#contact">Contact</a></button>
   </div>
 
   <a name="home"></a>
